--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <h1>EvaNotebook</h1>
   <p>
     Build your awesome ideas faster with no servers. Learn more <a href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">here.</a>
+     <span class="saving" *ngIf="isSaving">Saving...</span>
   </p>
 </section>
 
