--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="getting-started">
   <h1>EvaNotebook</h1>
   <p>
-    Build your awesome ideas faster with no servers. Learn more <a href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">here.</a>
+    Check out some examples on <a href="https://github.com/sanchezcarlosjr/javascript-notebook/issues/1">GitHub</a>.
      <span class="saving" *ngIf="isSaving">Saving...</span>
   </p>
 </section>
