chore(new desig): from a message to menu

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,7 @@ body {
 
 .ce-block__content,
 .ce-toolbar__content {
-  max-width: 70%;  /* example value, adjust for your own use case */
+  max-width: 70%;
 }
 
 math-field {
