feat: you can evaluate expresions with compute engine from cortexjs

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,3 +107,12 @@ body {
 math-field {
   width: 100%;
 }
+
+.output-math-field {
+  border: none !important;
+  outline: none !important;
+}
+
+.hide {
+  display: none;
+}
