feat: evaluate, simplify, and approximate numerically with cortexjs

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,14 @@ body {
 }
 
 .cdx-settings-button {
-  font-size: 14px;
+  font-size: 0.7em;
   min-height: fit-content !important;
   width: 95%;
 }
 
+.ce-popover--opened {
+  max-height: fit-content;
+}
 .output {
   display: flex;
   position: relative;
