--- a/jsonforms-react-seed/src/App.css
+++ b/jsonforms-react-seed/src/App.css
@@ -1,8 +1,9 @@
 body {
   padding: 0;
   margin: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 @font-face {
