--- a/src/styles.css
+++ b/src/styles.css
@@ -15,15 +15,30 @@ body {
 }
 
 
+/* https: //www.w3schools.com/howto/howto_css_responsive_iframes.asp */
+.container-iframe {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    border: none;
+    height: 100%;
+    overflow: hidden;
+}
+
 .cdx-settings-button {
   font-size: 0.7em;
   min-height: fit-content !important;
   width: 95%;
-}
-
-.iframe-cell-code {
-  border: none;
-  width: 100%;
 }
 
 .ce-popover--opened {
