--- a/src/styles.css
+++ b/src/styles.css
@@ -18,26 +18,10 @@ body {
   font-family: "Fira Code Regular",apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif !important;
 }
 
-
-/* https: //www.w3schools.com/howto/howto_css_responsive_iframes.asp */
-.container-iframe {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-}
-
 .responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    border-width: 0;
-    border: none;
-    height: 100%;
-    overflow: hidden;
+  width: 100%;
+  border: 0 none;
+  overflow: hidden;
 }
 
 .cdx-settings-button {
