feat: prerender notebook

--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -12,7 +12,7 @@
       <div class="nested-dropdowns__item">
         Runtime
       </div>
-      <ul class="bg-white">
+      <ul>
         <li><button (click)="runAll()">Run all (Ctrl+F9)</button></li>
         <li><button (click)="stopAll()">Stop all</button></li>
       </ul>
@@ -23,7 +23,7 @@
       </div>
       <ul class="bg-white">
         <li><a target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/issues/1">Examples</a></li>
-        <li><a target="_blank" href="">Docs</a></li>
+        <li><a routerLink="/docs">Docs</a></li>
         <li><a target="_blank" href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a></li>
       </ul>
     </li>
