--- a/src/app/notebook/notebook.component.css
+++ b/src/app/notebook/notebook.component.css
@@ -27,6 +27,10 @@ ul {
   padding: 0;
 }
 
+li {
+  background-color: #fff;
+}
+
 .element {
   color: #000;
   cursor: pointer;
@@ -38,6 +42,8 @@ ul {
 
 button {
   background-color: #fff;
+  border: none;
+  cursor: pointer;
 }
 
 a,button {
@@ -49,13 +55,15 @@ a,button {
 
 a:link {
   text-decoration: none;
+  color: black;
 }
 
 a:visited {
   text-decoration: none;
+  color: black;
 }
 
-li > button:hover {
+button:hover {
   background-color: #dadada;
 }
 
@@ -66,6 +74,7 @@ a:hover {
 
 a:active {
   text-decoration: none;
+  background-color: #dadada;
 }
 
 .nested-dropdowns {
