feat: we've installed angular material. We've removed react

--- a/src/styles.css
+++ b/src/styles.css
@@ -525,3 +525,10 @@ math-field {
     opacity: 1;
   }
 }
+
+.w100 {
+  width: 100%;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
