feat: verify form before post message

--- a/src/app/notebook/form/form.component.html
+++ b/src/app/notebook/form/form.component.html
@@ -4,5 +4,7 @@
   [schema]="schema"
   [uischema]="uischema"
   [renderers]="renderers"
+  [readonly]="readonly"
   (dataChange)="dataChange($event)"
+  (errors)="onErrorChange($event)"
 ></jsonforms>
