--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -6,6 +6,10 @@
       </div>
       <ul>
         <li><button (click)="createNewNotebook()">New notebook</button></li>
+        <li><button (click)="exportNotebook()">Export notebook (.json)</button></li>
+        <li>
+          <input accept="application/json" type="file" (change)="importNotebook($event)">
+        </li>
       </ul>
     </li>
     <li class="element"  role="button">
@@ -27,7 +31,6 @@
         <li><a target="_blank" href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a></li>
       </ul>
     </li>
-    <li *ngIf="isSaving"><span class="saving" >Saving...</span></li>
   </ul>
 </nav>
 
