--- a/src/app/notebook/notebook.component.css
+++ b/src/app/notebook/notebook.component.css
@@ -1,153 +1,3 @@
-.saving {
-  color: gray;
-  font-size: 0.5em;
+.mat-toolbar {
+  background-color: white;
 }
-
-nav {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  background: #fff;
-  margin-left: 0.3em;
-  margin-top: 0.25em;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-}
-
-.menu > li {
-  display: inline;
-}
-
-.brand {
-  display: inline;
-  font-size: 1em;
-  padding: 0;
-}
-
-li {
-  background-color: #fff;
-}
-
-.element {
-  color: #000;
-  cursor: pointer;
-  list-style: none;
-  padding: 0.25em 0.5em;
-  border: none;
-  font-size: 0.7em;
-}
-
-button {
-  background-color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-a,button {
-  width: 100%;
-  height: 100%;
-  display: block;
-  padding: 0.3em;
-}
-
-a:link {
-  text-decoration: none;
-  color: black;
-}
-
-a:visited {
-  text-decoration: none;
-  color: black;
-}
-
-button:hover {
-  background-color: #dadada;
-}
-
-a:hover {
-  text-decoration: none;
-  background-color: #dadada;
-}
-
-a:active {
-  text-decoration: none;
-  background-color: #dadada;
-}
-
-.nested-dropdowns {
-  display: flex;
-  z-index: 4;
-
-  /* Reset list styles */
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nested-dropdowns li {
-  cursor: pointer;
-  /* Used to position the sub nested-dropdowns */
-  position: relative;
-  -webkit-transition: all .25s ease;
-  -moz-transition: all .25s ease;
-  -ms-transition: all .25s ease;
-  -o-transition: all .25s ease;
-  transition: all .25s ease;
-}
-
-/* The sub nested-dropdowns */
-.nested-dropdowns ul {
-  /* Border */
-  border: 1px solid #d1d5db;
-
-  /* Hidden by default */
-  display: none;
-
-  /* Absolute position */
-  left: 0;
-  position: absolute;
-  top: 100%;
-
-  /* Reset styles */
-  list-style-type: none;
-  margin: 0;
-  width: max-content;
-  padding: 0;
-}
-
-/* The second level sub nested-dropdowns */
-.nested-dropdowns ul ul {
-  left: 100%;
-  position: absolute;
-  top: 0;
-}
-
-/* Change background color of list item when being hovered */
-.nested-dropdowns .element:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-/* Show the direct sub nested-dropdowns when hovering the list item */
-.nested-dropdowns li:hover > ul {
-  display: block;
-  z-index: 4;
-}
-
-.nested-dropdowns li:active > ul {
-  display: block;
-  z-index: 4;
-}
-
-.nested-dropdowns li:focus > ul {
-  display: block;
-  z-index: 4;
-}
-
-.nested-dropdowns li:focus-visible > ul {
-  display: block;
-  z-index: 4;
-}
-
