fix: solve some local conflicts during user changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -563,3 +563,13 @@ math-field {
 h1,h2,h3,h4,h5,h6,h7,h8,h9,h10,h11 {
   margin: 0 !important;
 }
+
+.cm-focused {
+  outline: none !important;
+}
+
+.py-error {
+  width: 100%;
+  margin: 0;
+  padding: 0.2em;
+}
