--- a/src/styles.css
+++ b/src/styles.css
@@ -364,7 +364,7 @@ body {
   font-display: swap;
 }
 
-* {
+* :not(i) {
   font-family: "Fira Code Regular",apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif !important;
   letter-spacing: 0;
 }
@@ -537,29 +537,6 @@ math-field {
   width: 100%;
 }
 
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(/assets/fonts/Material-Icons.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons', sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -moz-font-feature-settings: 'liga';
-  -moz-osx-font-smoothing: grayscale;
-}
-
 h1,h2,h3,h4,h5,h6,h7,h8,h9,h10,h11 {
   margin: 0 !important;
 }
@@ -580,4 +557,8 @@ py-config {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.fit-height {
+  height: fit-content;
 }
