--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -4,6 +4,7 @@
     <button mat-menu-item (click)="createNewNotebook()">New Notebook</button>
     <button mat-menu-item (click)="exportNotebook()">Export Notebook</button>
     <input mat-menu-item accept="application/json" type="file" (change)="importNotebook($event)">
+    <button mat-menu-item (click)="saveInUrl()">Save in URL</button>
   </mat-menu>
   <button mat-button [matMenuTriggerFor]="runtimeMenu">Runtime</button>
   <mat-menu #runtimeMenu="matMenu">
