feat: you can have topics, so you have multiple tabs with no overlapping

--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar *ngIf="!isMode2">
+  <input [(ngModel)]="name" (ngModelChange)="updateName($event)"  id="doc-name" class="doc-name" maxlength="259" autocomplete="off" aria-label="Notebook name" data-form-type="name"  data-lpignore="true">
   <button mat-button [matMenuTriggerFor]="fileMenu">File</button>
   <mat-menu #fileMenu="matMenu">
     <button mat-menu-item (click)="createNewNotebook()">New Notebook</button>
