--- a/src/app/notebook/notebook.component.css
+++ b/src/app/notebook/notebook.component.css
@@ -6,3 +6,15 @@
   color: gray;
   font-size: 0.5em;
 }
+
+.doc-name {
+  background: transparent;
+  border: 1px solid transparent;
+  color: #000;
+  font-size: 18px;
+  max-width: 100%;
+  min-width: 65px;
+  padding: 0 4px 0 3px;
+  text-overflow: ellipsis;
+  white-space: pre;
+}
