--- a/src/app/notebook/table/table.component.html
+++ b/src/app/notebook/table/table.component.html
@@ -1,10 +1,20 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <ng-container [matColumnDef]="col" *ngFor="let col of  displayedColumns">
-    <th mat-header-cell *matHeaderCellDef> {{col | uppercase}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<section *ngIf="port">
+  <mat-form-field class="w100">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  <div  matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" >
+      <ng-container [matColumnDef]="col" *ngFor="let col of displayedColumns">
+        <th mat-header-cell *matHeaderCellDef  mat-sort-header> {{col | titlecase}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of rows"></mat-paginator>
+  </div>
+</section>
