feat: observe blocks and commit with github

--- a/src/styles.css
+++ b/src/styles.css
@@ -549,6 +549,8 @@ h1,h2,h3,h4,h5,h6,h7,h8,h9,h10,h11 {
   width: 100%;
   margin: 0;
   padding: 0.2em;
+  background-color: #ffe9e8;
+  color: #9d041c;
 }
 
 /* py-config - not a component */
