--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -14,7 +14,8 @@
   </mat-menu>
   <button mat-button [matMenuTriggerFor]="helpMenu">Help</button>
   <mat-menu #helpMenu="matMenu">
-    <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/issues/1"  >Examples</a>
+    <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/issues/1">Examples</a>
+    <a mat-menu-item target="_blank" href="https://ipfsnotebook.sanchezcarlosjr.com/">IPFS Version</a>
     <button mat-menu-item routerLink="/docs">Documentation</button>
     <a mat-menu-item  target="_blank"  href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a>
   </mat-menu>
