chore: redirect to documentation. The documentation is a notebook itself.

--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -29,7 +29,7 @@
     <a mat-menu-item target="_blank" href="https://notebook.sanchezcarlosjr.com/">Web2.0</a>
     <a mat-menu-item target="_blank" href="https://isolatenotebook.sanchezcarlosjr.com/">Isolate notebook</a>
     <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/">Code</a>
-    <button mat-menu-item routerLink="/docs">Documentation</button>
+    <a mat-menu-item target="_blank" href="/?u=https://raw.githubusercontent.com/sanchezcarlosjr/computer-vision-and-graphics/main/assets/evanotebooks/notebook-documentation.json&n=Documentation">Documentation</a>
     <a mat-menu-item  target="_blank"  href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a>
   </mat-menu>
   <span *ngIf="isSaving" class="saving" >Saving...</span>
