--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -28,9 +28,9 @@
     <a mat-menu-item target="_blank" href="/?u=https://raw.githubusercontent.com/sanchezcarlosjr/computer-vision-and-graphics/main/assets/evanotebooks/notebook-documentation.json&n=Documentation">Documentation</a>
     <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/">Code</a>
     <a mat-menu-item target="_blank" href="https://ipfsnotebook.sanchezcarlosjr.com/">IPFS Branch</a>
-    <a mat-menu-item target="_blank" href="https://notebook.sanchezcarlosjr.com/">GitHub Page (Default)</a>
-    <a mat-menu-item target="_blank" href="https://isolatenotebook.sanchezcarlosjr.com/">Isolate notebook (Firebase)</a>
-    <a mat-menu-item target="_blank" href="https://ipfs.io/ipfs/QmVcZLrzGPrw6Yv9SfchPvHUaU2ZA6zzrSZPy2FZysZp7x">CID: QmVcZLrzGPrw6Yv9SfchPvHUaU2ZA6zzrSZPy2FZysZp7x</a>
+    <a mat-menu-item target="_blank" href="https://notebook.sanchezcarlosjr.com/">GitHub Page</a>
+    <a mat-menu-item target="_blank" href="https://isolatenotebook.sanchezcarlosjr.com/">Isolate notebook</a>
+    <a mat-menu-item target="_blank" href="https://ipfs.io/ipfs/QmVcZLrzGPrw6Yv9SfchPvHUaU2ZA6zzrSZPy2FZysZp7x">CID</a>
     <a mat-menu-item target="_blank" href="https://billowing-dawn-4565.on.fleek.co/">Fleek</a>
     <a mat-menu-item target="_blank" href="https://n.sanchezcarlosjr.com/">Firebase 1</a>
     <a mat-menu-item target="_blank" href="https://evanotebook.web.app/">Firebase 2</a>
