--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -26,15 +26,20 @@
   <mat-menu #helpMenu="matMenu">
     <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/issues/1">Examples</a>
     <a mat-menu-item target="_blank" href="/?u=https://raw.githubusercontent.com/sanchezcarlosjr/computer-vision-and-graphics/main/assets/evanotebooks/notebook-documentation.json&n=Documentation">Documentation</a>
-    <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/">Code</a>
-    <a mat-menu-item target="_blank" href="https://ipfsnotebook.sanchezcarlosjr.com/">IPFS Branch</a>
-    <a mat-menu-item target="_blank" href="https://notebook.sanchezcarlosjr.com/">GitHub Page</a>
-    <a mat-menu-item target="_blank" href="https://isolatenotebook.sanchezcarlosjr.com/">Isolate notebook</a>
-    <a mat-menu-item target="_blank" href="https://ipfs.io/ipfs/QmVcZLrzGPrw6Yv9SfchPvHUaU2ZA6zzrSZPy2FZysZp7x">CID</a>
-    <a mat-menu-item target="_blank" href="https://billowing-dawn-4565.on.fleek.co/">Fleek</a>
-    <a mat-menu-item target="_blank" href="https://n.sanchezcarlosjr.com/">Firebase 1</a>
-    <a mat-menu-item target="_blank" href="https://evanotebook.web.app/">Firebase 2</a>
-    <a mat-menu-item target="_blank" href="https://evanotebook.firebaseapp.com/">Firebase 3</a>
+    <button mat-menu-item [matMenuTriggerFor]="mirrorMenu">Mirrors</button>
+    <mat-menu #mirrorMenu="matMenu">
+      <a mat-menu-item target="_blank" href="https://ipfsnotebook.sanchezcarlosjr.com/">IPFS Branch</a>
+      <a mat-menu-item target="_blank" href="https://notebook.sanchezcarlosjr.com/">GitHub Page</a>
+      <a mat-menu-item target="_blank" href="https://isolatenotebook.sanchezcarlosjr.com/">Isolate notebook</a>
+      <a mat-menu-item target="_blank" href="https://ipfs.io/ipfs/QmVcZLrzGPrw6Yv9SfchPvHUaU2ZA6zzrSZPy2FZysZp7x">CID</a>
+      <a mat-menu-item target="_blank" href="https://billowing-dawn-4565.on.fleek.co/">Fleek</a>
+      <a mat-menu-item target="_blank" href="https://n.sanchezcarlosjr.com/">Firebase 1</a>
+      <a mat-menu-item target="_blank" href="https://evanotebook.web.app/">Firebase 2</a>
+      <a mat-menu-item target="_blank" href="https://evanotebook.firebaseapp.com/">Firebase 3</a>
+      <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/">Code</a>
+    </mat-menu>
+    <a mat-menu-item target="_blank" href="/assets/privacy_policy.txt?ngsw-bypass=true">Privacy policy</a>
+    <a mat-menu-item target="_blank" href="/assets/terms_of_service.txt?ngsw-bypass=true">Terms of service</a>
     <a mat-menu-item target="_blank" href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a>
   </mat-menu>
   <span *ngIf="isSaving" class="saving" >Saving...</span>
