documentate web container

--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -36,6 +36,7 @@
       <a mat-menu-item target="_blank" href="https://n.sanchezcarlosjr.com/">Firebase 1</a>
       <a mat-menu-item target="_blank" href="https://evanotebook.web.app/">Firebase 2</a>
       <a mat-menu-item target="_blank" href="https://evanotebook.firebaseapp.com/">Firebase 3</a>
+      <a mat-menu-item target="_blank" href="https://webcontainer.web.app/">Web containers</a>
       <a mat-menu-item target="_blank" href="https://github.com/sanchezcarlosjr/javascript-notebook/">Code</a>
     </mat-menu>
     <a mat-menu-item target="_blank" href="/assets/privacy_policy.txt?ngsw-bypass=true">Privacy policy</a>
