--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -44,7 +44,7 @@
     <a mat-menu-item target="_blank" href="/assets/terms_of_service.txt?ngsw-bypass=true">Terms of service</a>
     <a mat-menu-item target="_blank" href="https://carlos-eduardo-sanchez-torres.sanchezcarlosjr.com/Assisting-dementia-patients-with-the-Embodied-Voice-Assistant-Eva-Simulator-9aade1ebef9948acafba73d834b19d0b">About</a>
   </mat-menu>
-  <span *ngIf="isSaving" class="saving" >Saving...</span>
+  <span id="checkpoint" *ngIf="isSaving" class="saving" >Saving...</span>
 </mat-toolbar>
 
 <section id="editor-js"><p *ngIf="loading">Loading...</p></section>
