--- a/src/app/notebook/table/table.component.html
+++ b/src/app/notebook/table/table.component.html
@@ -10,7 +10,7 @@
         <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="clickRecord(row)"></tr>
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
