feat: share correctly notebook

--- a/src/app/notebook/notebook.component.html
+++ b/src/app/notebook/notebook.component.html
@@ -9,7 +9,7 @@
     </button>
     <button mat-menu-item  (click)="openRecent()" >Open recent</button>
     <button mat-menu-item (click)="saveInUrl()">Save in URL</button>
-    <button mat-menu-item (click)="removeUrlProviders()">Delete the URL parameter</button>
+    <button mat-menu-item (click)="removeUrlProviders()">Delete c and u parameter</button>
     <button mat-menu-item (click)="shareNotebook()">Share notebook</button>
   </mat-menu>
   <button mat-button [matMenuTriggerFor]="runtimeMenu">Runtime</button>
