--- a/src/app/notebook/table/table.component.html
+++ b/src/app/notebook/table/table.component.html
@@ -7,7 +7,7 @@
     <table mat-table [dataSource]="dataSource" >
       <ng-container [matColumnDef]="col" *ngFor="let col of displayedColumns">
         <th mat-header-cell *matHeaderCellDef  mat-sort-header> {{col | titlecase}} </th>
-        <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+        <td mat-cell *matCellDef="let element"> {{serialize(element[col])}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="clickRecord(row)"></tr>
