feat: import notebook from json

--- a/src/app/notebook/assistant/assistant.component.html
+++ b/src/app/notebook/assistant/assistant.component.html
@@ -1,2 +1,2 @@
 <img (click)="toggleChatbot()"  class="chatbot-toggle" ngSrc="../../../assets/avatar.png" alt="avatar.png" height="512" width="512">
-<iframe *ngIf="showChatbot" class="chatbot" src="https://e9c998d63c4940750c.gradio.live/"></iframe>
+<iframe *ngIf="showChatbot" class="chatbot" src="https://evatutor.sanchezcarlosjr.com/"></iframe>
