--- a/src/app/notebook/assistant/assistant.component.html
+++ b/src/app/notebook/assistant/assistant.component.html
@@ -1,2 +1,2 @@
 <img (click)="toggleChatbot()"  class="chatbot-toggle" ngSrc="../../../assets/avatar.png" alt="avatar.png" height="512" width="512">
-<iframe *ngIf="showChatbot" class="chatbot" src="https://evatutor.sanchezcarlosjr.com/"></iframe>
+<gradio-app *ngIf="showChatbot" info="false" class="chatbot" src="https://evatutor.sanchezcarlosjr.com/"></gradio-app>
